# Advent-of-Code

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  generate_day.cmake  run.sh  start-day.sh  template.cpp
src/: day_solver.h  main.cpp
src/2023/: day01.cpp  day02.cpp
src/aoc_utils/: aoc_utils.cpp  aoc_utils.h
src/cli/: args_parser.h  result.h  solver_factory.h  utils.h
src/problems/2024/: year2024_day01.cpp  year2024_day01.h  year2024_day02.cpp  year2024_day02.h  year2024_day03.cpp  year2024_day03.h  year2024_day04.cpp  year2024_day04.h
templates/: day_template.cpp.in  day_template.h.in  inputs.h.in  solver_factory.h.in
